--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,6 +76,16 @@ margin-bottom: 8px;
 
 }
 
+.content form label span {
+
+
+font-weight: normal;
+color: #999;
+font-size: 12px;
+
+
+}
+
 .content form input {
 
 margin-bottom: 20px;
